tests/typing/fail/nontuple-01.stderr
error: tuples don't exist: int * int is not a valid type...
  --> tests/typing/fail/nontuple-01.rs:11:13
   |
11 |             non(1, 2)
   |             ^^^^^^^^^
